Fix: scrollbar added to table and fixed overall styling.

--- a/Dashboard/assets/scss/base/_variables.scss
+++ b/Dashboard/assets/scss/base/_variables.scss
@@ -36,8 +36,8 @@ $footer-padding: 0.5rem 0 0;
 
 
 //inner-card
-$inner-card-height: 60px;
-$inner-card-width: 60px;
+$inner-card-height: 70px;
+$inner-card-width: 70px;
 
 
 //contents
