--- a/Dashboard/assets/scss/component/_buttons.scss
+++ b/Dashboard/assets/scss/component/_buttons.scss
@@ -2,7 +2,7 @@
 
 .btn {
     height: 35px;
-    width: 60px;
+    width: 70px;
     border:none;
 }
 
